--- a/attributes/locale/uk/LC_MESSAGES/django.po
+++ b/attributes/locale/uk/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-05-29 08:35+0000\n"
+"POT-Creation-Date: 2018-06-14 17:09+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -19,122 +19,120 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
-#: shop/attributes/admin/forms.py:65
-msgid "{} is required"
-msgstr "{} обов'язкове"
-
-#: shop/attributes/admin/forms.py:87
-msgid " [New value]"
-msgstr " [Нове значення]"
-
-#: shop/attributes/constants.py:11
-#: shop/attributes/models/product_attr_value.py:10
-msgid "Text"
-msgstr "Текст"
-
-#: shop/attributes/constants.py:12
-#: shop/attributes/models/product_attr_value.py:11
-msgid "Integer"
-msgstr "Число"
-
-#: shop/attributes/constants.py:13
-msgid "True / False"
-msgstr "Так / Ні"
-
-#: shop/attributes/constants.py:14
-msgid "Options"
-msgstr "Опції"
-
-#: shop/attributes/models/product_attr.py:34
-msgid "Product categories"
-msgstr "Категорії товарів"
-
-#: shop/attributes/models/product_attr.py:36
-#: shop/attributes/models/product_attr_option.py:12
-msgid "Name"
-msgstr "Ім'я"
-
-#: shop/attributes/models/product_attr.py:38
-msgid "Code"
-msgstr "Код"
-
-#: shop/attributes/models/product_attr.py:43
-msgid "Type"
-msgstr "Тип"
-
-#: shop/attributes/models/product_attr.py:46
-msgid "Required"
-msgstr "Обов'язкове"
-
-#: shop/attributes/models/product_attr.py:47
-msgid "You will not be able to update product without filling this field"
-msgstr "Ви не зможете зберегти товар не заповнивши дане поле"
-
-#: shop/attributes/models/product_attr.py:51
-msgid "Is visible"
-msgstr "Видимість на сайті"
-
-#: shop/attributes/models/product_attr.py:52
-msgid "Display this attribute for users"
-msgstr "Відображати аттрибут для користувачів"
-
-#: shop/attributes/models/product_attr.py:55
-msgid "Is filter"
-msgstr "Фільтр"
-
-#: shop/attributes/models/product_attr.py:56
-msgid "Display this attribute in products filter"
-msgstr "Відображати аттрибут при фільтрації товарів"
-
-#: shop/attributes/models/product_attr.py:83
-msgid "Product attribute"
-msgstr "Атрибут товару"
-
-#: shop/attributes/models/product_attr.py:84
-msgid "Product attributes"
-msgstr "Атрибути товару"
-
-#: shop/attributes/models/product_attr_mixins.py:18
+#: attributes/__init__.py:12
 msgid "Attributes"
 msgstr "Атрибути"
 
-#: shop/attributes/models/product_attr_option.py:10
-#: shop/attributes/models/product_attr_value.py:43
+#: attributes/admin/__init__.py:35 attributes/models/product_attr.py:42
+msgid "Product categories"
+msgstr "Категорії товарів"
+
+#: attributes/admin/__init__.py:40 attributes/models/product_attr.py:51
+msgid "Type"
+msgstr "Тип"
+
+#: attributes/admin/forms.py:82
+msgid "{} is required"
+msgstr "{} обов'язкове"
+
+#: attributes/admin/forms.py:104
+msgid " [New value]"
+msgstr " [Нове значення]"
+
+#: attributes/constants.py:11 attributes/models/product_attr_value.py:11
+msgid "Text"
+msgstr "Текст"
+
+#: attributes/constants.py:12 attributes/models/product_attr_value.py:12
+msgid "Integer"
+msgstr "Число"
+
+#: attributes/constants.py:13
+msgid "True / False"
+msgstr "Так / Ні"
+
+#: attributes/constants.py:14
+msgid "Options"
+msgstr "Опції"
+
+#: attributes/models/product_attr.py:44
+#: attributes/models/product_attr_option.py:12
+msgid "Name"
+msgstr "Ім'я"
+
+#: attributes/models/product_attr.py:46
+msgid "Code"
+msgstr "Код"
+
+#: attributes/models/product_attr.py:54
+msgid "Required"
+msgstr "Обов'язкове"
+
+#: attributes/models/product_attr.py:55
+msgid "You will not be able to update product without filling this field"
+msgstr "Ви не зможете зберегти товар не заповнивши дане поле"
+
+#: attributes/models/product_attr.py:59
+msgid "Is visible"
+msgstr "Видимість на сайті"
+
+#: attributes/models/product_attr.py:60
+msgid "Display this attribute for users"
+msgstr "Відображати аттрибут для користувачів"
+
+#: attributes/models/product_attr.py:63
+msgid "Is filter"
+msgstr "Фільтр"
+
+#: attributes/models/product_attr.py:64
+msgid "Display this attribute in products filter"
+msgstr "Відображати аттрибут при фільтрації товарів"
+
+#: attributes/models/product_attr.py:91
+msgid "Product attribute"
+msgstr "Атрибут товару"
+
+#: attributes/models/product_attr.py:92
+msgid "Product attributes"
+msgstr "Атрибути товару"
+
+#: attributes/models/product_attr_option.py:10
+#: attributes/models/product_attr_value.py:45
 msgid "Attribute"
 msgstr "Атрибут"
 
-#: shop/attributes/models/product_attr_option.py:19
+#: attributes/models/product_attr_option.py:19
 msgid "Attribute option"
 msgstr "Опція атрибуту"
 
-#: shop/attributes/models/product_attr_option.py:20
+#: attributes/models/product_attr_option.py:20
 msgid "Attribute options"
 msgstr "Опції атрибутів"
 
-#: shop/attributes/models/product_attr_value.py:12
+#: attributes/models/product_attr_value.py:13
 msgid "Boolean"
 msgstr "Булева змінна"
 
-#: shop/attributes/models/product_attr_value.py:15
+#: attributes/models/product_attr_value.py:16
 msgid "Option"
 msgstr "Опція"
 
-#: shop/attributes/models/product_attr_value.py:47
+#: attributes/models/product_attr_value.py:50
 msgid "Product"
 msgstr "Товар"
 
-#: shop/attributes/models/product_attr_value.py:87
+#: attributes/models/product_attr_value.py:90
 msgid "Yes"
 msgstr "Так"
 
-#: shop/attributes/models/product_attr_value.py:87
+#: attributes/models/product_attr_value.py:90
 msgid "No"
 msgstr "Ні"
 
-#: shop/attributes/models/product_attr_value.py:100
+#: attributes/models/product_attr_value.py:103
 msgid "Product attribute value"
 msgstr "Значення атрибуту товару"
 
-#: shop/attributes/models/product_attr_value.py:101
+#: attributes/models/product_attr_value.py:104
 msgid "Product attribute values"
 msgstr "Значення атрибутів товарів"
